2009-03-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configura.ac: Post-release version suffix added.

	* datrie/trie.h (trie_save): Document parameter 'path'.
	* doc/Doxygen.in: Update format to doxygen 1.5.8.

2009-03-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	=== Version 0.2.0 ===

2009-03-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Makefile.am, +README.migration:
	Add migration documentation.

2008-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/alpha-map.c (alpha_map_char_to_trie, alpha_map_trie_to_char):
	Tighten the loop for more readability, plus eliminating one duplicated
	check.

2008-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/datrie.c (da_get_base, da_get_check, da_set_base,
	da_set_check)):
	Revert lower bound checks. It's no use checking too much for internal
	code.

2008-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/trie.h, datrie/trie.c, datrie/libdatrie.def
	(trie_state_is_leaf, +trie_state_is_single):
	  - Introduce a new state condition: single. A single state is a state
	    in a single path, with no other branch til its leaf.
	  - Redefine trie_state_is_leaf() as a macro based on it and
	    trie_state_is_terminal().

2008-12-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/trie.h, datrie/trie.c, datrie/libdatrie.def (trie_state_copy):
	Add a new API function for trie state reuse support.

2008-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* tools/trietool.c (conv_to_alpha): Use 'unsigned char' instead of
	'uint8'. Better not tie to datrie internal notations too much.

2008-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version bump.

	* tools/trietool.c (conv_to_alpha): Use uint8 to access data bytes
	instead of char, to fix char signedness bug.

2008-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	=== Version 0.1.99.2 ===
